Revert "design changes"
This reverts commit 9179c243b25556bfc553a273edea9e8aef06bd85.

--- a/webroot/assets/global/css/components.css
+++ b/webroot/assets/global/css/components.css
@@ -2258,7 +2258,8 @@ Form Layouts
     margin-bottom: 0;
 }
 .form-horizontal .radio > span {
-    margin-top: -3px;
+    margin-top: 2px;
+}
 
 /* Rows seperated form layout */
 .form .form-row-seperated .portlet-body {
