--- a/webroot/assets/global/css/components.css
+++ b/webroot/assets/global/css/components.css
@@ -1,6 +1,11 @@
 /*********************************
  METRONIC SQUARE STYLE COMPONENTS
 *********************************/
+
+.v-center{
+    vertical-align: middle !important;
+}
+
 /***
 Rounded corners reset
 ***/
