--- a/webroot/assets/global/css/components.css
+++ b/webroot/assets/global/css/components.css
@@ -1407,9 +1407,7 @@ Customized Bootstrap Buttons
     font-size: 13px;
 }
 
-.btn-xs {
-    padding: 1px 5px;
-}
+
 .btn-xs > i {
     font-size: 12px;
 }
@@ -12228,4 +12226,4 @@ Transparent Button
 }
 
 
-.form .form-actions .btn-set select {max-width:150px !important;}
+.form .form-actions .btn-set select {max-width:150px !important;margin-left: 10px;}
