--- a/webroot/assets/global/css/components.css
+++ b/webroot/assets/global/css/components.css
@@ -2,6 +2,10 @@
  METRONIC SQUARE STYLE COMPONENTS
 *********************************/
 
+.select2me{
+    min-width: 150px !important;
+}
+
 .v-center{
     vertical-align: middle !important;
 }
