--- a/webroot/assets/global/css/plugins.css
+++ b/webroot/assets/global/css/plugins.css
@@ -520,6 +520,7 @@ Bootstrap Wizard
   margin-bottom: 30px;
 }
 .form-wizard .steps {
+  font-size: 16px;
   padding: 10px 0;
   margin-bottom: 15px;
   background-color: white;
