--- a/webroot/assets/global/css/components.css
+++ b/webroot/assets/global/css/components.css
@@ -2,6 +2,13 @@
  METRONIC SQUARE STYLE COMPONENTS
 *********************************/
 
+.nopadorborder{
+    padding: 0 !important;
+    border-width: 0 !important;
+    border-style: none !important;
+    margin-bottom: 0px !important;
+}
+
 .select2me{
     min-width: 150px !important;
 }
