--- a/webroot/assets/global/css/components.css
+++ b/webroot/assets/global/css/components.css
@@ -17,10 +17,7 @@
     vertical-align: middle !important;
 }
 .shadow{
-    text-shadow: 1px 1px black;
-    font-weight: bold;
-    font-size: 120%;
-    margin-right: 4px;
+    margin-right: 3px;font-size: 110%;
 }
 
 /***
