--- a/webroot/assets/global/css/components.css
+++ b/webroot/assets/global/css/components.css
@@ -2181,7 +2181,7 @@ Form Layouts
     padding-left: 0;
     padding-right: 0;
 }
-.form .form-actions {
+.form-actions {
     padding: 20px 10px;
     margin: 0;
     background-color: #f5f5f5;
